<resources>
    <string name="app_name">Zoom2u</string>
    <string name="place_api_key">AIzaSyBKwJd0d1w6Bpi1yfE_MRY3MuHmkG7fEWE</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="edit">Edit</string>
    <string name="document">Document</string>
    <string name="courier">COURIER</string>
    <string name="next">Next</string>
    <string name="weigh1">Weight</string>
    <string name="login_txt_header">Zoom2u connects you with local drivers in your area for fast same day deliveries.</string>
    <string name="email_header">Email</string>
    <string name="pass_header">Password</string>
    <string name="login">Login</string>
    <string name="forget_pass">Forgot password?</string>
    <string name="register">Register</string>
    <string name="create_acc">Create a New Account</string>
    <string name="name_header">Name*</string>
    <string name="last_name_header">Last Name*</string>
    <string name="company_header">Company</string>
    <string name="phone_header">Phone Number*</string>
    <string name="email_header_login">Email*</string>
    <string name="pass_header_login">Password"</string>
    <string name="confirm_pass_header_login">Confirm Password"</string>
    <string name="find_us">How did you find us?</string>
    <string name="term_con">I Accept the customer </string>
    <string name="term_con1">I Accept the customer terms and conditions.</string>
    <string name="sign_up">Sign up</string>
    <string name="already_acc">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="signup_error_msg">Something went wrong Please try again.</string>
    <string name="home_header">What would you like to send today?</string>
    <string name="delivery_redesigned">Delivery, Redesigned.</string>
    <string name="home_text">At Zoom2u we know how important it is to know where your parcel is and when it will be delivered.</string>
    <string name="get_a_quote">Get a Quote</string>
    <string name="make_a_booking">Make a booking</string>
    <string name="my_profile">My Profile</string>
    <string name="my_location">My Location</string>
    <string name="change_pass">Change Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="no_my_location">No my location found</string>
    <string name="default_drop">| DEFAULT DROP-OFF</string>
    <string name="default_pick">| DEFAULT PICK-UP</string>
    <string name="save_your_place">Save your favourite places</string>
    <string name="add_new">Add New</string>
    <string name="location_name">Contact name and business*</string>
    <string name="email_address">Email address</string>
    <string name="contact_number">Contact number*</string>
    <string name="address">Address*</string>
    <string name="pickup_location">Set as default pick-up location.</string>
    <string name="drop_location">Set as default drop-off location.</string>
    <string name="remove">Remove</string>
    <string name="save_location">Save Location</string>
    <string name="find_me">Find me</string>
    <string name="save">Save</string>
    <string name="current_pass">Current Password</string>
    <string name="new_pass">New Password</string>
    <string name="new_pass_cnfrm">New Password Confirmation</string>
    <string name="delivery_history">Delivery history</string>
    <string name="no_delivery_history">No Delivery History</string>
    <string name="picked_up">Picked Up</string>
    <string name="delivery">Delivery</string>
    <string name="accepted">Accepted</string>
    <string name="dropped_off">Dropped Off</string>
    <string name="delivery_details">Delivery details</string>
    <string name="pick_up_details">Pick-up Details</string>
    <string name="drop_off_details">Drop-off Details</string>
    <string name="pickup">Pickup</string>
    <string name="timing">Timing</string>
    <string name="requested">(Requested)</string>
    <string name="Drop_off">DropOff</string>
    <string name="actual">(Actual)</string>
    <string name="notes">Notes</string>
    <string name="add_delivery_details">Add Delivery Details</string>
    <string name="delivery_details1">Delivery Details</string>
    <string name="pickup_details">Pickup details</string>
    <string name="contact_name">Contact name*</string>
    <string name="company_name">Company name</string>
    <string name="level_suit">Level/Unit/Suit number</string>
    <string name="instruction">Any special delivery instructions</string>
    <string name="house">House/Apartment</string>
    <string name="pick_check1">Send SMS Tracking Link to Pickup Person</string>
    <string name="pick_check2">This is no-contact pickup</string>
    <string name="pick_check2_desc">(please provide a phone number above and provide notes regarding the location of the package)</string>
    <string name="dropOff_details1">DropOff details</string>
    <string name="drop_check1">This is a no-contact delivery (please provide authority to leave details below)</string>
    <string name="drop_check2">Authority to Leave (ATL)</string>
    <string name="drop_check2_desc">(please provide a phone number above and provide notes regarding the location of the package)</string>
    <string name="commercial">Commercial</string>
    <string name="parcel_after">Shipment available after</string>
    <string name="parcel_after_txt">(your parcel will be picked up and deliver within the requested window.it may not be at this exact time)</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="required_before">Required before</string>
    <string name="weight">Total Shipment Weight</string>
    <string name="weight_txt">Select total weight(kg)*</string>
    <string name="weight_desc">(Total weight cannot exceed 100kg, and each item cannot exceed 30kg. This is for the health and safety of our drivers. If you require extra large items moved, please use the Bid Requests feature!)</string>
    <string name="items_we_not_send">Items we cannot send interstate</string>
    <string name="string_not_send">Authority to Leave at</string>
    <string name="package_type">Is the package a laptop or mobile phone ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="other">Other (please specify)</string>
    <string name="documents_dimension">Documents Dimension</string>
    <string name="quantity">Quantity*</string>
    <string name="x">x</string>
    <string name="item_weight">Item Weight*</string>
    <string name="kg">Kg</string>
    <string name="total_weight">Total Weight*</string>
    <string name="length">Length*</string>
    <string name="cm">cm</string>
    <string name="width">Width*</string>
    <string name="height">Height*</string>
    <string name="confirm">Confirm</string>
    <string name="select">Select</string>
    <string name="pricing_payment">Pricing and Payment</string>
    <string name="delivery_feature">Show Delivery Features</string>
    <string name="quotes_valid">Your quotes are valid for </string>
    <string name="expired_quote">Your quotes have expired. Please click here to generate new quotes.</string>
    <string name="proceed_to_payment">Proceed to payment</string>
    <string name="booking_confirmation">Booking Confirmation</string>
    <string name="my_package">My package</string>
    <string name="delivery_time">Delivery time</string>
    <string name="booking_confirmation_term_con">I Accept the customer terms and conditions.</string>
    <string name="total">Total</string>
    <string name="min">minutes</string>
    <string name="your_booking_number">Your booking number</string>
    <string name="order_confirmed">Order Confirmed</string>
    <string name="what_next">What’s next?</string>
    <string name="what_next_text">Keep an eye on your smartphone or computer for three email/messages from. They are:</string>
    <string name="details_eta">Courier’s details and ETA</string>
    <string name="drop_off_confirmation">Dropoff confirmation and invoice</string>
    <string name="want_5_credit">Want a $5 credit?</string>
    <string name="wantACreditDetails">Tweet or share us on Facebook to earn a $5 credit towards your next delivery.</string>
    <string name="textDetails1">Why is my booking on hold ?</string>
    <string name="textDetails2">Thank you for your booking. We have it recorded in our system, but have placed it on hold as the credit card details that you entered failed the authorisation process.</string>
    <string name="textDetails3">This may be because the details you entered are incorrect, or authorisation for this purchase has been rejected by your bank.</string>
    <string name="textDetails4">Your package will not be picked up while the booking is on hold.</string>
    <string name="textDetails5">Please enter or add an alternative payment method below in order to make your booking active. We accept MasterCard, Visa and Amex.</string>
    <string name="txtChangePayment">Change payment method</string>
    <string name="text_details7">If you have any queries, please email us at</string>
    <string name="text_details8"><u>deliveries@zoom2u.com.au</u></string>
    <string name="interstateAlertHeader">Thanks for using Zoom2u for your interstate delivery</string>
    <string name="interstateMsgTxt">Please note your delivery will go on a Qantas flight. Once it arrives at the destination airport our couriers can collects the parcel 20 minutes after arrival. \n\nIf the item is at the airport prior to 10am Qantas will deliver it to destination airport on the same day. If it’s after 10am there is still a good chance it will be delivered on the same day however it is not guaranteed. \n\nIf your item is extremely important and needs to be delivered same day Qantas does offer a next flight service, this will cost an additional $95 on your delivery. This means that once your parcel arrives at the airport 1 hour form this time it can go on the next available flight to your destination. If you like this option please place the booking and call our office on 1300 966 628 or email deliveries@zoom2u.com \n\nAir freight can be delayed, airports can close and there is a lot that is outside of our control. We therefore unfortunately cannot guarantee this service, that being said 99% of our customers are very happy with this service.</string>
    <string name="interstateAlertBelowHeader">To help with delivery please make sure</string>
    <string name="interstateAlertPoint1">Your parcel is marked for Zoom2u with the destination airport.</string>
    <string name="interstateAlertPoint2">If it’s a small item place it in a larger box so it can’t be lost.</string>
    <string name="interstateAlertPoint3">Make your parcel is packaged extremely well so it can’t be damaged.</string>
    <string name="interstateAlertPoint4">Make sure the destination address is available after 5pm.</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="close">Close</string>
    <string name="_4">4</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="quote_confirm1">All available couriers will be notified of your request, and will reply (usually within minutes) with individual pricing and time frames.</string>
    <string name="quote_txt4">Your courier will then collect and deliver your items!</string>
    <string name="quote_txt2">You can see these offers below, and we\'ll email you a summary too!</string>
    <string name="request_confirmed">Request Confirmed</string>
    <string name="quote_request_received">Quote request received</string>
    <string name="what_s_next">What’s next?</string>
    <string name="quote_txt3">You pick which offer will be most appealing to you.</string>
    <string name="quotes">Quotes</string>
    <string name="go_to_offers">Go to offers</string>
</resources>