<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.application.bottom_navigation.home.booking_confirmation.order_confirm_hold.OrderConfirmActivity">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/close"
            style="@style/style_15_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/close"
            android:textColor="@color/base_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/header_txt"
            style="@style/style_15_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/request_confirmed"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/rl1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/shadow_top"
            android:elevation="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/cl"
            app:layout_constraintTop_toBottomOf="@+id/header_txt">

            <TextView
                android:id="@+id/yourQuotetext"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/orderconfirmed"
                android:gravity="center"
                android:text="@string/quote_request_received"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/relOlderView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="10dp">

                <TextView
                    android:id="@+id/whatNextTxt"
                    style="@style/style_15_bold"
                    android:layout_width="wrap_content"
                    android:padding="5dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/what_s_next"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <View
                    android:id="@+id/topDefaultView2"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_below="@+id/whatNextTxt"
                    android:layout_marginTop="5dp"
                    android:background="@color/gray" />


                <LinearLayout
                    android:id="@+id/linearView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/topDefaultView2"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/btn1"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/circle_blue"
                        android:gravity="center"
                        android:text="@string/_1"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/txt1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="0.99"
                        android:paddingBottom="5dp"
                        android:paddingStart="5dp"
                        android:text="@string/quote_confirm1"
                        android:textColor="@color/gun_metal"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/linearView1"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/btn2"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/circle_blue"
                        android:gravity="center"
                        android:text="@string/_2"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/txt2"
                        style="@style/style_13_regular"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="0.99"
                        android:paddingStart="5dp"
                        android:text="@string/quote_txt2"
                        android:textColor="@color/gun_metal"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/linearView2"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/btn3"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/circle_blue"
                        android:gravity="center"
                        android:text="@string/_3"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/txt3"
                        style="@style/style_13_regular"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="0.99"
                        android:gravity="center_vertical"
                        android:paddingStart="5dp"
                        android:text="@string/quote_txt3"
                        android:textColor="@color/gun_metal"
                        android:textSize="14sp" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/linearView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/linearView3"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/btn4"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/circle_blue"
                        android:gravity="center"
                        android:text="@string/_4"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/txt4"
                        style="@style/style_13_regular"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="0.99"
                        android:gravity="center_vertical"
                        android:paddingStart="5dp"
                        android:text="@string/quote_txt4"
                        android:textColor="@color/gun_metal"
                        android:textSize="14sp" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:elevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <View
                android:id="@+id/line_view"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line_color"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text3"
                style="@style/style_15_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:padding="3dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/quotes"
                android:textAlignment="center"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/line_view" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtAwaitingQuotes"
                style="@style/style_13_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto_regular"
                android:inputType="textMultiLine"
                android:maxLines="2"
                android:textColor="@color/gun_metal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text3" />


            <TextView
                android:id="@+id/get_quote_btn"
                style="@style/style_15_bold"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/chip_background"
                android:gravity="center"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:text="@string/go_to_offers"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtAwaitingQuotes" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>